// Copyright 2019 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package google.cloud.talent.v4beta1;

import "google/api/annotations.proto";
import "google/cloud/talent/v4beta1/common.proto";
import "google/cloud/talent/v4beta1/filters.proto";
import "google/cloud/talent/v4beta1/histogram.proto";
import "google/cloud/talent/v4beta1/profile.proto";
import "google/cloud/talent/v4beta1/profile_service.proto";

option go_package = "google.golang.org/genproto/googleapis/cloud/talent/v4beta1;talent";
option java_multiple_files = true;
option java_outer_classname = "RecommendationServiceProto";
option java_package = "com.google.cloud.talent.v4beta1";
option objc_class_prefix = "CTS";

// A service handles recommendations between jobs and profiles.
service RecommendationService {
  // Recommend profiles for a given job.
  rpc RecommendProfilesForJob(RecommendProfilesForJobRequest) returns (RecommendProfilesForJobResponse) {
    option (google.api.http) = {
      post: "/v4beta1/{job=projects/*/tenants/*/jobs/*}:recommendProfiles"
      body: "*"
      additional_bindings {
        post: "/v4beta1/{job=projects/*/jobs/*}:recommendProfiles"
        body: "*"
      }
    };
  }
}

// Recommend profiles for job request.
message RecommendProfilesForJobRequest {
  // The resource name for the job to get recommendations from. This is
  // generated for the service when a job is created.
  //
  // The format is "projects/{project_id}/jobs/{job_id}", for example,
  // "projects/api-test-project/jobs/1234".
  string job = 1;

  // Optional.
  //
  // The starting point of a query result.
  string page_token = 2;

  // Optional.
  //
  // The maximum number of profiles to be returned per page of results.
  //
  // The maximum allowed page size is 100.
  //
  // Default is 100 if unspecified.
  int32 page_size = 3;

  // Optional.
  //
  // Profile query to filter profiles for recommendation.
  ProfileQuery profile_query = 4;

  // Optional.
  //
  // An integer that specifies the current offset (that is, starting result) in
  // search results. This field is only considered if [page_token][google.cloud.talent.v4beta1.RecommendProfilesForJobRequest.page_token] is unset.
  //
  // The maximum allowed value is 5000. Otherwise an error is thrown.
  //
  // For example, 0 means to search from the first profile, and 10 means to
  // search from the 11th profile. This can be used for pagination, for example
  // pageSize = 10 and offset = 10 means to search from the second page.
  int32 offset = 5;
}

// Recommend profiles for job response.
message RecommendProfilesForJobResponse {
  // The profiles recommended according to the criteria in the request.
  repeated SummarizedProfile summarized_profiles = 1;

  // A token to retrieve the next page of results.
  string next_page_token = 2;
}
